--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 <!-- You may freely edit this file. See harness/README in the NetBeans platform -->
 <!-- for some information on what you could do (e.g. targets to override). -->
 <!-- If you delete this file and reopen the project it will be recreated. -->
-<project name="org.apache.netbeans.localise.de" default="netbeans" basedir=".">
-    <description>Builds, tests, and runs the project org.apache.netbeans.localise.de.</description>
+<project name="org.apache.netbeans.localize.de" default="netbeans" basedir=".">
+    <description>Builds, tests, and runs the project org.apache.netbeans.localize.de.</description>
     <import file="nbproject/build-impl.xml"/>
     
     <target name="build" depends="build-language-jars,netbeans,test-build"/>
